--- a/css/style.css
+++ b/css/style.css
@@ -453,3 +453,49 @@ iframe {
   font-size: 18px;
   text-align: center;
 }
+#overlay {
+  opacity: 0;
+  pointer-events: none;
+  position: fixed;
+  display: flex;
+  background: rgba(0,0,0,0.8);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  align-items: center;
+  justify-content: center;
+  z-index: 9;
+  transition: all 0.25 ease-in;
+}
+#overlay.open {
+  opacity: 1;
+  pointer-events: all;
+}
+#overlay .overlay-content {
+  font-size: 200%;
+  color: #FFFFFF;
+}
+#overlay #overlay-close {
+  position: absolute;
+  right: 16px;
+  top: 16px;
+  width: 16px;
+  height: 16px;
+  opacity: 0.6;
+}
+#overlay #overlay-close:before ,
+#overlay #overlay-close:after {
+  background-color: #fff;
+  position: absolute;
+  left: 8px;
+  content: ' ';
+  height: 16px;
+  width: 2px;
+}
+#overlay #overlay-close:before {
+  transform: rotate(45deg);
+}
+#overlay #overlay-close:after {
+  transform: rotate(-45deg);
+}
